<resources>
    <string name="app_name">TrvavelGuidAssistant</string>
    <string name="welcome_to_n_traveller_s_guide_and_assistant">WELCOME TO\nTraveller\'s Guide And Assistant</string>
    <string name="sign_in_to_your_account">Sign In to Your Account</string>
    <string name="e_mail">E-Mail</string>
    <string name="you_example_com">you@example.com</string>
    <string name="password_hint">• • • • • • •</string>
    <string name="password">Password</string>
    <string name="sign_in">SIGN IN</string>
    <string name="sign_up">SIGN UP</string>
    <string name="don_t_have_an_account">Don\'t have an Account</string>
    <string name="we_need_few_details_to_get_your_account_ready">We need few details to get your account ready</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_number">ID Number</string>
    <string name="xxxxxxxxxv_or_xxxxxxxxxxxx">xxxxxxxxxV or xxxxxxxxxxxx</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account</string>
    <string name="you_examle_com">you@examle.com</string>
    <string name="welcome">WELCOME</string>
    <string name="sign_out">Sign Out</string>
    <string name="map">Map</string>
    <string name="map_service">Map Service</string>
    <string name="scheduler">Scheduler</string>
    <string name="translator">Translator</string>
    <string name="travel_log">Travel Log</string>
    <string name="settings">Settings</string>
    <string name="upload">Upload</string>
    <string name="show_all">Show All</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="capture_or_choose_an_image_from_gallery">Capture or choose an image from gallery</string>
    <string name="capture">Capture</string>
    <string name="copy_text">Copy Text</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_password">Reset Password</string>
    <string name="name">Name :</string>
    <string name="e_mail_col">E-mail :</string>
    <string name="stack">stack</string>
    <string name="id_no">ID No :</string>
    <string name="upload_profile_picture">Upload Profile Picture</string>
    <string name="edit_user_details">Edit User Details</string>
    <string name="change_password">Change Password</string>
    <string name="change_e_mail">Change E-mail</string>
    <string name="to_change_password_confirm_your_current_password_enter_it_below">To Change Password, Confirm your current password. Enter it below.</string>
    <string name="to_change_e_mail_confirm_your_current_password_enter_it_below">To Change E-mail address, Confirm your current password. Enter it below.</string>
    <string name="enter_new_e_mail_below">Enter new E-mail below</string>
    <string name="confirm_new_e_mail">Confirm New E-Mail</string>
    <string name="update_user_details">Update User Details</string>
    <string name="map_type">Map Type</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="click_below_to_add_new_image">click below to add new image or capture new image</string>
    <string name="result_will_appear_here">Result will appear here</string>
    <string name="result">Result</string>
    <string name="add_image">Add image</string>
    <string name="image_preview">Image Preview</string>
    <string name="translator_with_ocr">Translator with OCR</string>
    <string name="upload_new_log">Upload New Log</string>
    <string name="view_old_logs">View Old Logs</string>
    <string name="upload_new_travel_log">Upload New Travel Log</string>
    <string name="enter_below_details_to_upload_a_new_travel_log">Enter Below Details to Upload a New Travel Log.</string>
    <string name="log_name">Log Name</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
    <string name="maximum_number_of_pictures_3">Maximum Number of Pictures - 3</string>
    <string name="click_on_below_icons_to_add_pictures_maximum_number_is_3">Click on below icons to add pictures. Maximum number is 3.</string>
    <string name="click_on_below_icon_to_add_a_video">Click on Below icon to add a video.</string>
    <string name="log_number">Log Number -</string>
    <string name="no">NO</string>
    <string name="enter_text">Enter Text</string>
    <string name="translate">Translate</string>
    <string name="translated_text_here">Translated text here</string>
    <string name="or">Or</string>
    <string name="say_something">Say something</string>
    <string name="photo_to_text_converter">Photo to Text Converter</string>
    <string name="language_identifier">Language Identifier</string>
    <string name="language">Language -</string>
    <string name="question_mark">Unknown</string>
    <string name="enter_your_text">Enter Your text</string>
    <string name="identify_language">Identify Language</string>
    <string name="enter_location_name_here">Enter Location name here</string>
    <string name="work_only_for_english_language">(Work only for English language)</string>
    <string name="filter_your_logs_using_date_select_the_date_you_want_to_view">Filter Your Logs Using Date,log number or log name. (Enter date as MM/DD/YY. Ex : 03rd of May 2022 as 05/03/22)</string>
    <string name="date_un">date -</string>
    <string name="log_name_un">Log Name -</string>
    <string name="your_description_will_show_up_here">Your description will show up here</string>
    <string name="images">Images</string>
    <string name="weather">Weather</string>
    <string name="current_location_weather">Current Location Weather</string>
    <string name="search_city_weather">Search City Weather</string>
    <string name="temperature_un">Temperature -</string>
    <string name="unknown_c">Unknown °C</string>
    <string name="weather_type">Weather Type -</string>
    <string name="unknown">Unknown</string>
    <string name="city_name">City Name -</string>
    <string name="data_received_time">Data Received Time -</string>
    <string name="visibility">Visibility</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="pressure">Pressure</string>
    <string name="humidity">Humidity</string>
    <string name="sun_set">Sunset -</string>
    <string name="sunrise">Sunrise -</string>
    <string name="country_code">Country Code -</string>
    <string name="city_name_no">city name</string>
    <string name="search">search</string>
    <string name="times_and_dates_shown_with_respect_to_your_time_zone_not_that_place_time">Times and dates shown with respect to your time zone (Not that place time if you want that place time simply add timezone to the time)</string>
    <string name="time_zone">Time Zone -</string>
    <string name="register_new_account">Register New Account</string>
    <string name="resend_verification_email">Resend verification Email</string>
    <string name="resend_n_verification_email">Resend \n verification Email</string>
    <string name="line">|</string>
    <string name="user_name">User Name</string>
    <string name="enter_text_you_want_to_identify_the_language">Enter text you want to identify the language.</string>
    <string name="uploaded_travel_logs">Uploaded Travel Logs</string>
    <string name="travel_log_system">Travel - Log - System</string>
    <string name="upcoming_5_days_weather_forecast_data_with_3_hour_step">Upcoming 5 Days weather forecast data with 3-hour step</string>
    <string name="all_times_are_shown_according_that_place_gmt_time_to_convert_it_to_your_time_please_add_the_time_zone">(All times are shown according to \'0 h GMT\' time. To convert it to your time please add the time zone)</string>
    <string name="_24_h">24 h</string>
    <string name="_48_h">48 h</string>
    <string name="_72_h">72 h</string>
    <string name="_96_h">96 h</string>
    <string name="_120_h">120 h</string>
    <string name="_5_day_weather_forecast">5 day weather forecast</string>
    <string name="enter_end_location">Enter End Location</string>
    <string name="enter_start_location">Enter Start Location</string>
    <string name="route">Route</string>
    <string name="datecap">DATE :</string>
</resources>