<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".activities.SelectSignActivity">
    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="@dimen/_250sdp"
            android:layout_height="@dimen/_250sdp"
            android:layout_marginBottom="@dimen/_80sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonSignIn1"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:fontFamily="@font/sf_bold"
        android:includeFontPadding="false"
        android:text="@string/sign_in"
        android:textColor="@color/colorTextIcons"
        android:textSize="@dimen/_10ssp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSignUp1"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginStart="@dimen/_40sdp"
            android:layout_marginEnd="@dimen/_40sdp"
            android:fontFamily="@font/sf_bold"
            android:includeFontPadding="false"
            android:text="@string/register_new_account"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_10ssp"/>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>