<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_background"
    tools:context=".activities.SelectedLogActivity">

    <LinearLayout
        android:id="@+id/layoutHeader"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/colorPrimary"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingStart="@dimen/_8sdp"
        android:paddingEnd="@dimen/_8sdp"
        app:layout_constraintTop_toTopOf="parent">
        <ImageView
            android:id="@+id/imageBack"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_back"
            app:tint="@color/colorTextIcons" />

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="@dimen/_10sdp"
            android:fontFamily="@font/sf_bold"
            android:includeFontPadding="false"
            android:textColor="@color/colorTextIcons"
            android:textSize="@dimen/_12ssp"
            android:textAlignment="textEnd"
            android:layout_marginEnd="@dimen/_8sdp"/>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutHeader">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/logoHeader"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_70sdp"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:gravity="center"
            app:layout_constraintTop_toBottomOf="@id/layoutHeader">

            <ImageView
                android:id="@+id/imageLogo"
                android:layout_width="@dimen/_250sdp"
                android:layout_height="@dimen/_50sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"
                app:layout_constraintTop_toBottomOf="@id/layoutHeader"
                app:layout_constraintEnd_toEndOf="parent" />
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            app:cardCornerRadius="@dimen/_15sdp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_margin="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_bold"
                android:text="@string/log_number"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/viewLogNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_bold"
                android:text="@string/stack"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_5sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_bold"
                android:text="@string/log_name_un"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/viewLogName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_bold"
                android:text="@string/stack"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center"
            android:layout_marginBottom="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/sf_bold"
                android:text="@string/date_un"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/viewLogDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:fontFamily="@font/sf_bold"
                android:text="@string/stack"
                android:textColor="@color/colorPrimaryText"
                android:textSize="@dimen/_12sdp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_bold"
            android:text="@string/description"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_12sdp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_13sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:id="@+id/viewLogDescription"
            android:fontFamily="@font/sf_medium"
            android:hint="@string/your_description_will_show_up_here"
            android:inputType="textMultiLine"
            android:layout_marginBottom="@dimen/_15sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            tools:ignore="TextViewEdits" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sf_bold"
            android:text="@string/images"
            android:textAllCaps="true"
            android:layout_marginBottom="@dimen/_5sdp"
            android:textColor="@color/colorPrimaryText"
            android:textSize="@dimen/_12sdp" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="@dimen/_8sdp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/viewImage1"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_90sdp"
                android:contentDescription="@string/app_name" />
            <ImageView
                android:id="@+id/viewImage2"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_90sdp"
                android:contentDescription="@string/app_name" />
            <ImageView
                android:id="@+id/viewImage3"
                android:layout_width="@dimen/_85sdp"
                android:layout_height="@dimen/_90sdp"
                android:contentDescription="@string/app_name" />
        </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>